<resources>
    <string name="app_name">The Library</string>
    <string name="welcome">ברוכים הבאים לספרייה</string>
    <string name="b">הזמנה</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Author" />
    <string name="author">Author</string>
    <string name="Brief">Brief</string>
    <string name="BookName">Book Name</string>
    <string name="e1" />
    <string name="l1" />
    <string name="w1" />
    <string name="boo1" />
    <string name="book_Id">book_Id</string>
    <string name="Publishing_year">Publishing_year</string>
    <string name="Language">Language</string>
    <string name="Genre">Genre</string>
    <string name="Client">לקוח</string>
    <string name="Worker">ספרן</string>
    <string name="regUser">משתמש חדש? להרשמה לחץ כאן</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Address">Address</string>
    <string name="title_activity_login_admin">LoginAdminActivity</string>
    <string name="reset">שכחתי סיסמה</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_menu_user">MenuUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>